update to results section

--- a/references.bib
+++ b/references.bib
@@ -1014,11 +1014,8 @@
   Journal                  = {International Journal of Civil Engineering},
   Year                     = {2011},
   Number                   = {1},
-  Pages                    = {49},
-  Volume                   = {9},
-
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.18}
+  Pages                    = {49--56},
+  Volume                   = {9}
 }
 
 @Article{Weichert1980,
