--- a/discussion_of_results.tex
+++ b/discussion_of_results.tex
@@ -26,23 +26,23 @@ In the probabilistic seismic hazard analysis increasing minimum magnitude will d
 % \label{tab:pga_values_models}
 % \end{table*}
 
-Using different approaches, probabilistic seismic hazard analyses have been conducted for the northern Iran. \citet{Tavakoli1999}, based on probabilisitic seismic computation using the historical and instrumental earthquake data, geology, tectonics, fault activity and seismic source model in Iran, prepared a new seismic hazard map of Iran. They divided Iran into 20 seismic tectonic regions and used seismic data up to 1997. They used \citet{Kijko1992} method  to determine the seismicity parameters. The results were displayed for the return period of 75 and 475 years. They predicted the maximum mean acceleration, near north Tabriz fault zone, North Tehran fault zone, and Dasht-e-Bayaz fault zone, to be around 0.45g for return period of 475 years. The smallest value of 0.35g for 475 years is predicted in a narrow band trending NW-SE and extending from Urmia to Isfahan.  
+% Using different approaches, probabilistic seismic hazard analyses have been conducted for the northern Iran. \citet{Tavakoli1999}, based on probabilisitic seismic computation using the historical and instrumental earthquake data, geology, tectonics, fault activity and seismic source model in Iran, prepared a new seismic hazard map of Iran. They divided Iran into 20 seismic tectonic regions and used seismic data up to 1997. They used \citet{Kijko1992} method  to determine the seismicity parameters. The results were displayed for the return period of 75 and 475 years. They predicted the maximum mean acceleration, near north Tabriz fault zone, North Tehran fault zone, and Dasht-e-Bayaz fault zone, to be around 0.45g for return period of 475 years. The smallest value of 0.35g for 475 years is predicted in a narrow band trending NW-SE and extending from Urmia to Isfahan.  
 
-Using logic tree approach,\citet{Ghodrati2003} predicted the peak ground acceleration for Tehran for 475 years of return period. They used historical and instrumental data inside a circle of 200 km around the Tehran and converted them into $M_s$ magnitude scale. They used maximum likelihood method to get the seismicity parameters. Their results represented the peak ground acceleration for 10\% probability of exceedance in 50 years to be in range of $0.27g - 0.46g$.
+% Using logic tree approach, \citet{Ghodrati2003} predicted the peak ground acceleration for Tehran for 475 years of return period. They used historical and instrumental data inside a circle of 200 km around the Tehran and converted them into $M_s$ magnitude scale. They used maximum likelihood method to get the seismicity parameters. Their results represented the peak ground acceleration for 10\% probability of exceedance in 50 years to be in range of $0.27g - 0.46g$.
 
-\citet{Ghodrati2008} studied seismic hazard and seismic zoning of Gilan province based on probabilistic approach. They used 3 attenuation relationship and 2 seismicity parameters through logic three approach. They presented the map of the maximum probable acceleration over bedrock for 475 and 2475 year return periods. The pga in the interested area, ranges from 0.1g to 0.3g and 0.2g to 0.45g for 475 and 2475 year return periods, respectively. 
+% \citet{Ghodrati2008} studied seismic hazard and seismic zoning of Gilan province based on probabilistic approach. They used 3 attenuation relationship and 2 seismicity parameters through logic three approach. They presented the map of the maximum probable acceleration over bedrock for 475 and 2475 year return periods. The pga in the interested area, ranges from 0.1g to 0.3g and 0.2g to 0.45g for 475 and 2475 year return periods, respectively. 
 
-\citet{Vafaie2011} compiled a seismic catalog from 8th century A.D to 2006 for considering the near field effect earthquake PGA in Tabriz city in north-west of Iran. They used two attenuation relationships. They predicted the PGA for 475 and 2475 years of return period to be in range of 0.2 - 0.65 g and 0.3 - 0.9 g, respectively.  
+% \citet{Vafaie2011} compiled a seismic catalog from 8th century A.D to 2006 for considering the near field effect earthquake PGA in Tabriz city in north-west of Iran. They used two attenuation relationships. They predicted the PGA for 475 and 2475 years of return period to be in range of 0.2 - 0.65 g and 0.3 - 0.9 g, respectively.  
 
-Using linear source model,\citet{Rahgozar2012} conducted a probabilistic assessment of PGA and uniform hazard spectra for Bojnurd city, the Capital of North Khorasan Province, Iran. They found the seismicity parameters of historical and instrumental data through \citet{Kijko2000} approach. They predicted the peak ground acceleration for three different attenuation relationships through implementing in the SEISRISK III software \citep{Bender1982}, and combine the results through logic tree approach. The results indicate that the PGA for 475 and 2475 years of return period will be in range of 0.15-0.22 g and 0.28-0.49 g, respectively.
+% Using linear source model,\citet{Rahgozar2012} conducted a probabilistic assessment of PGA and uniform hazard spectra for Bojnurd city, the Capital of North Khorasan Province, Iran. They found the seismicity parameters of historical and instrumental data through \citet{Kijko2000} approach. They predicted the peak ground acceleration for three different attenuation relationships through implementing in the SEISRISK III software \citep{Bender1982}, and combine the results through logic tree approach. The results indicate that the PGA for 475 and 2475 years of return period will be in range of 0.15-0.22 g and 0.28-0.49 g, respectively.
 
-Using  EZ-FRISK computer program and considering $M_{min} = 4$ as a minimum magnitude that can affect the engineering site, \citet{Abdi2013} evaluated a probabilistic seismic hazard analysis for Tehran and surrounding areas in order to quantify the dominant events that have the most contribution on ground motion exceedance from different hazard level. They predicted the PGA for Tehran and Karaj city to be in range of 0.27 - 0.3 g for return period of 475 years. 
+% Using  EZ-FRISK computer program and considering $M_{min} = 4$ as a minimum magnitude that can affect the engineering site, \citet{Abdi2013} evaluated a probabilistic seismic hazard analysis for Tehran and surrounding areas in order to quantify the dominant events that have the most contribution on ground motion exceedance from different hazard level. They predicted the PGA for Tehran and Karaj city to be in range of 0.27 - 0.3 g for return period of 475 years. 
 
-\citet{Abdollahzadeh2014a} carried out a probabilistic seismic hazard assessment for part of Northern Iran. They used the logic tree approach to capture the epistemic uncertainty of seismic hazard assessment in delineation of seismic sources and selection of attenuation relationship. They used three attenuation relationships and 2 seismic source models. They collected the earthquake catalog from various references and reported the pga for 475 and 2475 years of return period for northern cities.   
+% \citet{Abdollahzadeh2014a} carried out a probabilistic seismic hazard assessment for part of Northern Iran. They used the logic tree approach to capture the epistemic uncertainty of seismic hazard assessment in delineation of seismic sources and selection of attenuation relationship. They used three attenuation relationships and 2 seismic source models. They collected the earthquake catalog from various references and reported the pga for 475 and 2475 years of return period for northern cities.   
 
-\citet{Golara2014} conducted a probabilistic seismic hazard analysis of interconnected infrastructure of Iranian high pressure gas supply system. He used line and area source model in order to estimate the Iranian  high-pressure gas supply system's ability to withstand a sudden large ground movements caused by potential earthquakes and related phenomenon that might be expected. he used simplified tectonic map after \citet{Alavi1991}. He used four attenuation relationships and presented the results for 2475 years of return period. 
+% \citet{Golara2014} conducted a probabilistic seismic hazard analysis of interconnected infrastructure of Iranian high pressure gas supply system. He used line and area source model in order to estimate the Iranian  high-pressure gas supply system's ability to withstand a sudden large ground movements caused by potential earthquakes and related phenomenon that might be expected. he used simplified tectonic map after \citet{Alavi1991}. He used four attenuation relationships and presented the results for 2475 years of return period. 
 
-\citet{Boostan2015} developed new model for probabilistic seismic hazard assessment based on fuzzy sets theory for Tehran, Iran. The results is about 0.42-0.48 g for 475 years. 
+% \citet{Boostan2015} developed new model for probabilistic seismic hazard assessment based on fuzzy sets theory for Tehran, Iran. The results is about 0.42-0.48 g for 475 years. 
 
 Table ~\ref{tab:pga_values} presents the PGA value for some of the major cities in northern Iran from different studies. This study values are results of 5-region model with $M_w > 4.5 $.
 
