--- a/content.tex
+++ b/content.tex
@@ -16,11 +16,7 @@
 % Temporary stuff
 % ---------------
 
-% \input{hazard_analysis_results}
-
-% \input{Hazard_calculation.tex}
-
-\input{discussion_of_results}
+% \input{discussion_of_results}
 
 % \input{conclusion}    
 
