--- a/discussion_of_results.tex
+++ b/discussion_of_results.tex
@@ -3,9 +3,9 @@
 
 % Seismic hazard in northern Iran is computed based on background seismicity and projected on a set of hazard maps. The results obtained are represented as maps for the spatial distribution of horizontal peak ground acceleration with 10\% and 2\% probability of exceedance in 50 years, which correspond to the return period of 475 and 2475 years. 
 
-The areas of large probabilistic ground motions clearly coincide with zones with a large number of events of magnitude 3.0 and larger. In this study we used two models for seismic hazard calculation, including $M_w>5$ and $M_w>4.5$. $M_w$ is the minimum magnitude that can affect the engineering site. 
+% The areas of large probabilistic ground motions clearly coincide with zones with a large number of events of magnitude 3.0 and larger. In this study we used two models for seismic hazard calculation, including $M_w>5$ and $M_w>4.5$. $M_w$ is the minimum magnitude that can affect the engineering site. 
 
-In the probabilistic seismic hazard analysis increasing minimum magnitude will decrease the mean rate of earthquake occurrence ($\nu=exp(\alpha - \beta M_0)$), and also increase the value for the probability density function in the initial magnitudes. In a simple source the difference between different models specially in higher pga levels is negligible. However, in this study where we consider each event as a seismic source with different $\alpha$ and $\beta$ value, the results are considerably different. According to our results the reduction of the mean rate of earthquake occurrence has considerable effect on the results. 
+% In the probabilistic seismic hazard analysis increasing minimum magnitude will decrease the mean rate of earthquake occurrence ($\nu=exp(\alpha - \beta M_0)$), and also increase the value for the probability density function in the initial magnitudes. In a simple source the difference between different models specially in higher pga levels is negligible. However, in this study where we consider each event as a seismic source with different $\alpha$ and $\beta$ value, the results are considerably different. According to our results the reduction of the mean rate of earthquake occurrence has considerable effect on the results. 
 
 % Results are presented for different models. In general in the models based on combination of five tectonic seismic regions there are five regions with high pga values. These regions are including: 40 km East of Gorgan (54.9,36.8), 50 km NW of Semnan(53.1,36), 110 km SW of Qazvin(48.9,35.8), 70 km SE of Ardabil(48.7,37.7), and 105 km North of Urmia(45.1,38.5). The pga values for each model at the mentioned places is presented in Table ~\ref{tab:pga_values_models}
 
@@ -44,35 +44,35 @@ In the probabilistic seismic hazard analysis increasing minimum magnitude will d
 
 % \citet{Boostan2015} developed new model for probabilistic seismic hazard assessment based on fuzzy sets theory for Tehran, Iran. The results is about 0.42-0.48 g for 475 years. 
 
-Table ~\ref{tab:pga_values} presents the PGA value for some of the major cities in northern Iran from different studies. This study values are results of 5-region model with $M_w > 4.5 $.
+% Table ~\ref{tab:pga_values} presents the PGA value for some of the major cities in northern Iran from different studies. This study values are results of 5-region model with $M_w > 4.5 $.
 
-\begin{table*}[!ht]
-\centering
-\caption{Comparison of PGA, from different studies for selected cities in Northern Iran. This study values are results of 5-regions model with "$M_w > 4.5$" (V2011:  \citet{Vafaie2011}), G2008: \citet{Ghodrati2008}, B2015: \citet{Boostan2015},  G2003:  \citet{Ghodrati2003},  Az2014: \citet{Abdollahzadeh2014a} , Ra2012: \citet{Rahgozar2012} , Ab2013: \citet{Abdi2013} ) }
-\begin{tabular}{ | c | c | c | c | c | c | c | c | c | c | c |}
-\hline
-	\multirow{2}{*}{Cities} & \multirow{2}{*}{Lon} & \multirow{2}{*}{Lat} & \multicolumn{2}{|c|}{This study} & \multirow{2}{*}{2800} & Zare & Golara &\multicolumn{3}{|c|}{Other Refrences}    \\ 
-	\cline{4-5}  \cline{9-11}  &  &  & 10\% & 2\% &  &  2012 & 2014 & 10\% & 2\% & ref \\ \hline
-	 Urumieh   & 45.1   & 37.6    & 0.25 & 0.41   & 0.3 & 0.35-0.5 & 0.3-0.5 &  &  &  \\ \hline
-	 Tabriz       & 46.3    & 38.1   & 0.23 & 0.39   & 0.35 & 0.35-0.5 & 0.9-1.2& 0.2- 0.65 & 0.3 to 0.9 & V2011 \\ \hline
-	 Ardabil      & 48.3   & 38.3   & 0.30 & 0.51    & 0.3 & 0.35-0.5 &0.5-0.7  &&  &  \\ \hline
-	 Zanjan      & 48.5   & 36.7   & 0.19 & 0.32    & 0.3 & 0.35-0.5 &0.5-0.7  &&  &  \\ \hline
-	 Manjil       & 49.4   & 36.7    & 0.33 & 0.53   & 0.35 & 0.65 $<$ &0.5-0.7& 0.25 & 0.4 & G2008 \\ \hline
-	  \multirow{2}{*}{Rasht}  & \multirow{2}{*}{49.6} & \multirow{2}{*}{37.3} & \multirow{2}{*}{0.3} & \multirow{2}{*}{0.5} & \multirow{2}{*}{0.3} & \multirow{2}{*}{0.5-0.65} & \multirow{2}{*}{0.5-0.7} & 0.1 &  0.2 &  G2008 \\ 
-	  \cline{9-11}	             &  &  &  &  &  &  & & 0.25-0.3 & 0.55-0.6 & Az2013\\ \hline
-	 Qazvin     & 50.0   & 36.3    & 0.22 & 0.37   & 0.35 & 0.35-0.5 &0.5-0.7& 0.31 & 0.42 &  \\ \hline
-	 Karaj        & 51.0   & 35.8    & 0.20 & 0.36   & 0.35 & 0.35-0.5 &0.7-0.9& 0.31 & 0.42 & Ab2013 \\ \hline
-	 \multirow{3}{*}{Tehran}  & \multirow{3}{*}{51.4} & \multirow{3}{*}{35.7} & \multirow{3}{*}{0.27} & \multirow{3}{*}{0.45} & \multirow{3}{*}{0.35} & \multirow{3}{*}{0.35-0.5} & \multirow{3}{*}{0.7-0.9} & 0.37-0.42 &  &  G2003 \\ 
-	 \cline{9-11}	             &  &  &  &  &  &  & & 0.27-0.3  &  & Ab2013\\ 
-	 \cline{9-11}	             &  &  &  &  &  &  & & 0.42-0.48 &  & B2015\\ \hline
-	 Sari          & 53.0   & 36.3   & 0.39   & 0.62  & 0.3 & 0.35-0.5 &0.5-0.7& 0.3 - 0.35 &  0.65 - 0.7 & Az2014\\ \hline
-	 Semnan   & 53.4   & 35.6   & 0.36   & 0.55  & 0.3 & 0.35-0.5 &0.3-0.5&  & & \\ \hline
-	 Gorgan    & 54.4   & 36.8    & 0.45  & 0.69  & 0.3 & 0.35-0.5 &0.5-0.7& 0.3 - 0.35 &  0.65 -0.7 & Az2014\\ \hline
-	 Bojnurd   & 57.3    & 37.5    & 0.43  & 0.67  & 0.3 & 0.35-0.5 &0.7-0.9&0.16-0.2  & 0.32-0.45  & Ra2012  \\ \hline
-	 Mashhad & 59.6     & 36.3   & 0.21 & 0.37  & 0.3 & 0.35-0.5 &0.7-0.9  &  &&  \\ \hline
-\end{tabular}
-\label{tab:pga_values}
-\end{table*}
+% \begin{table*}[!ht]
+% \centering
+% \caption{Comparison of PGA, from different studies for selected cities in Northern Iran. This study values are results of 5-regions model with "$M_w > 4.5$" (V2011:  \citet{Vafaie2011}), G2008: \citet{Ghodrati2008}, B2015: \citet{Boostan2015},  G2003:  \citet{Ghodrati2003},  Az2014: \citet{Abdollahzadeh2014a} , Ra2012: \citet{Rahgozar2012} , Ab2013: \citet{Abdi2013} ) }
+% \begin{tabular}{ | c | c | c | c | c | c | c | c | c | c | c |}
+% \hline
+% 	\multirow{2}{*}{Cities} & \multirow{2}{*}{Lon} & \multirow{2}{*}{Lat} & \multicolumn{2}{|c|}{This study} & \multirow{2}{*}{2800} & Zare & Golara &\multicolumn{3}{|c|}{Other Refrences}    \\ 
+% 	\cline{4-5}  \cline{9-11}  &  &  & 10\% & 2\% &  &  2012 & 2014 & 10\% & 2\% & ref \\ \hline
+% 	 Urumieh   & 45.1   & 37.6    & 0.25 & 0.41   & 0.3 & 0.35-0.5 & 0.3-0.5 &  &  &  \\ \hline
+% 	 Tabriz       & 46.3    & 38.1   & 0.23 & 0.39   & 0.35 & 0.35-0.5 & 0.9-1.2& 0.2- 0.65 & 0.3 to 0.9 & V2011 \\ \hline
+% 	 Ardabil      & 48.3   & 38.3   & 0.30 & 0.51    & 0.3 & 0.35-0.5 &0.5-0.7  &&  &  \\ \hline
+% 	 Zanjan      & 48.5   & 36.7   & 0.19 & 0.32    & 0.3 & 0.35-0.5 &0.5-0.7  &&  &  \\ \hline
+% 	 Manjil       & 49.4   & 36.7    & 0.33 & 0.53   & 0.35 & 0.65 $<$ &0.5-0.7& 0.25 & 0.4 & G2008 \\ \hline
+% 	  \multirow{2}{*}{Rasht}  & \multirow{2}{*}{49.6} & \multirow{2}{*}{37.3} & \multirow{2}{*}{0.3} & \multirow{2}{*}{0.5} & \multirow{2}{*}{0.3} & \multirow{2}{*}{0.5-0.65} & \multirow{2}{*}{0.5-0.7} & 0.1 &  0.2 &  G2008 \\ 
+% 	  \cline{9-11}	             &  &  &  &  &  &  & & 0.25-0.3 & 0.55-0.6 & Az2013\\ \hline
+% 	 Qazvin     & 50.0   & 36.3    & 0.22 & 0.37   & 0.35 & 0.35-0.5 &0.5-0.7& 0.31 & 0.42 &  \\ \hline
+% 	 Karaj        & 51.0   & 35.8    & 0.20 & 0.36   & 0.35 & 0.35-0.5 &0.7-0.9& 0.31 & 0.42 & Ab2013 \\ \hline
+% 	 \multirow{3}{*}{Tehran}  & \multirow{3}{*}{51.4} & \multirow{3}{*}{35.7} & \multirow{3}{*}{0.27} & \multirow{3}{*}{0.45} & \multirow{3}{*}{0.35} & \multirow{3}{*}{0.35-0.5} & \multirow{3}{*}{0.7-0.9} & 0.37-0.42 &  &  G2003 \\ 
+% 	 \cline{9-11}	             &  &  &  &  &  &  & & 0.27-0.3  &  & Ab2013\\ 
+% 	 \cline{9-11}	             &  &  &  &  &  &  & & 0.42-0.48 &  & B2015\\ \hline
+% 	 Sari          & 53.0   & 36.3   & 0.39   & 0.62  & 0.3 & 0.35-0.5 &0.5-0.7& 0.3 - 0.35 &  0.65 - 0.7 & Az2014\\ \hline
+% 	 Semnan   & 53.4   & 35.6   & 0.36   & 0.55  & 0.3 & 0.35-0.5 &0.3-0.5&  & & \\ \hline
+% 	 Gorgan    & 54.4   & 36.8    & 0.45  & 0.69  & 0.3 & 0.35-0.5 &0.5-0.7& 0.3 - 0.35 &  0.65 -0.7 & Az2014\\ \hline
+% 	 Bojnurd   & 57.3    & 37.5    & 0.43  & 0.67  & 0.3 & 0.35-0.5 &0.7-0.9&0.16-0.2  & 0.32-0.45  & Ra2012  \\ \hline
+% 	 Mashhad & 59.6     & 36.3   & 0.21 & 0.37  & 0.3 & 0.35-0.5 &0.7-0.9  &  &&  \\ \hline
+% \end{tabular}
+% \label{tab:pga_values}
+% \end{table*}
 
 % \subsection{$\pm \sigma$ of attenuation relationship}
 
