--- a/results.tex
+++ b/results.tex
@@ -48,7 +48,34 @@ An additional consideration to make here is the fact that any one model cannot b
 
 These figures show interest results. Combining the two magnitude levels in either the R or U models (Figs.~\ref{fig:pgaavgs}a and \ref{fig:pgaavgs}b) does not have a significant impact other than finding a middle point in between the two ``slices'' taken at the corresponding hazard curves of all the individual grid points. For that matter, defining a threshold at $M_w$ 6.0 is almost equivalent and becomes only a matter of choice. Combining both R and U models, and the two magnitude results (Fig.~\ref{fig:pgaavgs}d), on the other hand, oversmooths the results and eliminates some of the detail desirable in this kind of analysis. It is therefore the combination of the R and U models, but at the separate magnitude thresholds (Fig.~\ref{fig:pgaavgs}c) the one that offers the most plausible scenario. These combinations are the ones that best match the visual inspection of the seismicity of the region (shown in Fig.~\ref{fig:catalog}) and follow the major faults (shown in Fig.~\ref{fig:selected}a), while also bringing into the picture the regional background seismicity of moderate magnitude earthquakes. That is, in the combinations shown in Fig.~\ref{fig:pgaavgs}c one can clearly observe the contribution of the North Tabriz Fault system in the Azerbaijan region, the contribution of the Piranshahr and Morvarid faults in the Zagros region, and that of the different faults in the Alborz and Kopeh Dagh regions. 
 
-We also note that the overall distribution of PGA values shown in Fig.~\ref{fig:pgaavgs}c are the ones that best agree with the recent study by \citet{Khodaverdian_2016_BSSA}. These estimates also agree, on average, with other previous studies. For the north-west seismic regions of Azerbaijan and Zagros, for instance, \citet{Tavakoli1999} predicts maximum mean PGA values of 0.45 g near the North Tabriz Fault and the North Tehran Fault zones, and 0.4 g around the city of Urmia, where we find equivalent values to be between 0.4 and 0.6 g, and about 0.35 g, respectively. The results from \citet{Vafaie2011} for the city of Tabriz, on the other hand, are slightly higher than the averages shown in Fig.~\ref{fig:pgaavgs}c and are closer to those we present in Fig.~\ref{fig:pga}b, which are in the order of 0.8 g and 0.6 for the models 2U5.5 and 10U5.5. In the north-central region of Alborz, \citet{Ghodrati2003} and \citet{Boostan2015} predict PGA values of the order 0.27--0.46 g and 0.42--0.48 for Tehran, where we found equivalent results to be between 0.3 and 0.45 g. Similarly, \citet{Abdi2013} reports expected PGA values in the vicinity of Karaj and Tehran to be on the order of 0.3 g. Results from \citet{Ghodrati2008} for the Gilan province around the city of Rasht are also of the same order of those we show in Figs.~\ref{fig:pga} and \ref{fig:pgaavgs}c. Finally, in for the Kopeh Dagh region, and in particular, for the city of Bojnurd in the nort-east province of Khorasan, \citet{Rahgozar2012} reports expected PGA values for return periods of 475 and 2475 years in range of 0.15--0.22 g and 0.28--0.49 g, respectively, where for magnitudes exceeding $M_w$ 6.5 we found equivalent values to be in the order of 0.2--0.4 and 0.4--0.6 g. 
+We also note that the overall distribution of PGA values shown in Fig.~\ref{fig:pgaavgs}c are the ones that best agree with the recent study by \citet{Khodaverdian_2016_BSSA}. These estimates also agree, on average, with other previous studies. For the north-west seismic regions of Azerbaijan and Zagros, for instance, \citet{Tavakoli1999} predicts maximum mean PGA values of 0.45 g near the North Tabriz Fault and the North Tehran Fault zones, and 0.4 g around the city of Urmia, where we find equivalent values to be between 0.4 and 0.6 g, and about 0.35 g, respectively. The results from \citet{Vafaie2011} for the city of Tabriz, on the other hand, are slightly higher than the averages shown in Fig.~\ref{fig:pgaavgs}c and are closer to those we present in Fig.~\ref{fig:pga}b, which are in the order of 0.8 g and 0.6 for the models 2U5.5 and 10U5.5. In the north-central region of Alborz, \citet{Ghodrati2003} and \citet{Boostan2015} predict PGA values of the order 0.27--0.46 g and 0.42--0.48 for Tehran, where we found equivalent results to be between 0.3 and 0.45 g. Similarly, \citet{Abdi2013} reports expected PGA values in the vicinity of Karaj and Tehran to be on the order of 0.3 g. Results from \citet{Ghodrati2008} for the Gilan province around the city of Rasht are also of the same order of those we show in Figs.~\ref{fig:pga} and \ref{fig:pgaavgs}c. Finally, in for the Kopeh Dagh region, and in particular, for the city of Bojnurd in the nort-east province of Khorasan, \citet{Rahgozar2012} reports expected PGA values for return periods of 475 and 2475 years in range of 0.15--0.22 g and 0.28--0.49 g, respectively, where for magnitudes exceeding $M_w$ 6.5 we found equivalent values to be in the order of 0.2--0.4 and 0.4--0.6 g. Table \ref{tab:pga} shows a condensed version of these comparisons between our results and those of previous studies for different points of interest (cities) in northern Iran.
+
+\begin{table}[t]
+    \centering
+    \caption{Comparison of expected PGA values for selected cities in northern Iran between results obtained in this study and those of others. For reference, the following codes are used. Va11: \citet{Vafaie2011}, Gh08: \citet{Ghodrati2008}, Bo15: \citet{Boostan2015}, Gh03: \citet{Ghodrati2003}, Ab14: \citet{Abdollahzadeh2014a}, Ra12: \citet{Rahgozar2012}, Ad13 \citet{Abdi2013}.}
+    \begin{tabular}{l}
+        \hline
+        Cities      \\
+        \hline
+        Urumieh     \\
+        Tabriz      \\
+        Ardabil     \\
+        Zanjan      \\
+        Manjil      \\
+        Rasht       \\
+        Qazvin      \\
+        Karaj       \\
+        Tehran      \\
+        Sari        \\
+        Semnan      \\
+        Gorgan      \\
+        Bojnurd     \\
+        Mashhad     \\
+        \hline
+    \end{tabular}
+    \label{tab:pga} 
+\end{table}
+
 
 ~\\
 * * *
@@ -82,3 +109,7 @@ Fig.~\ref{fig:hazardcurve} represents the hazard curve of different model for so
 % \citet{Abdollahzadeh2014a} carried out a probabilistic seismic hazard assessment for part of Northern Iran. They used the logic tree approach to capture the epistemic uncertainty of seismic hazard assessment in delineation of seismic sources and selection of attenuation relationship. They used three attenuation relationships and 2 seismic source models. They collected the earthquake catalog from various references and reported the pga for 475 and 2475 years of return period for northern cities.   
 
 % \citet{Golara2014} conducted a probabilistic seismic hazard analysis of interconnected infrastructure of Iranian high pressure gas supply system. He used line and area source model in order to estimate the Iranian  high-pressure gas supply system's ability to withstand a sudden large ground movements caused by potential earthquakes and related phenomenon that might be expected. he used simplified tectonic map after \citet{Alavi1991}. He used four attenuation relationships and presented the results for 2475 years of return period. 
+
+% The areas of large probabilistic ground motions clearly coincide with zones with a large number of events of magnitude 3.0 and larger. In this study we used two models for seismic hazard calculation, including $M_w>5$ and $M_w>4.5$. $M_w$ is the minimum magnitude that can affect the engineering site. 
+
+% In the probabilistic seismic hazard analysis increasing minimum magnitude will decrease the mean rate of earthquake occurrence ($\nu=exp(\alpha - \beta M_0)$), and also increase the value for the probability density function in the initial magnitudes. In a simple source the difference between different models specially in higher pga levels is negligible. However, in this study where we consider each event as a seismic source with different $\alpha$ and $\beta$ value, the results are considerably different. According to our results the reduction of the mean rate of earthquake occurrence has considerable effect on the results. 
