--- a/references.bib
+++ b/references.bib
@@ -1083,15 +1083,14 @@
   Publisher                = {Springer}
 }
 
-@Conference{zare2012,
+@InProceedings{Zare2012,
   Title                    = {Development of Seismic Hazard Zoning Map for {I}ran, Based on New Seismic Source Determination},
   Author                   = {Zar{\'e}, Mehdi},
-  Booktitle                = {15th World Conference on Earthquake Engineering, September 24 to 28},
+  Booktitle                = {Proc.~15th World Conference on Earthquake Engineering},
   Year                     = {2012},
-  Publisher                = {National Information Centre Earthquake Engineering IIT Kanpur},
 
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.18}
+  Address                  = {Lisboa, Portugal, September 24--28},
+  Number                   = {2837}
 }
 
 @Article{Zare2014,
