figures 12 and 13 added

--- a/results.tex
+++ b/results.tex
@@ -52,19 +52,25 @@ These figures show interest results. Combining the two magnitude levels in eithe
 
 We also note that the overall distribution of PGA values shown in Fig.~\ref{fig:pgaavgs}c are the ones that best agree with the recent study by \citet{Khodaverdian_2016_BSSA}. These estimates also agree, on average, with other previous studies. For the north-west seismic regions of Azerbaijan and Zagros, for instance, \citet{Tavakoli1999} predicts maximum mean PGA values of 0.45 g near the North Tabriz Fault and the North Tehran Fault zones, and 0.4 g around the city of Urmia, where we find equivalent values to be between 0.4 and 0.6 g, and about 0.35 g, respectively. The results from \citet{Vafaie2011} for the city of Tabriz, on the other hand, are slightly higher than the averages shown in Fig.~\ref{fig:pgaavgs}c and are closer to those we present in Fig.~\ref{fig:pga}b, which are in the order of 0.8 g and 0.6 for the models 2U5.5 and 10U5.5. In the north-central region of Alborz, \citet{Ghodrati2003} and \citet{Boostan2015} predict PGA values of the order 0.27--0.46 g and 0.42--0.48 for Tehran, where we found equivalent results to be between 0.3 and 0.45 g. Similarly, \citet{Abdi2013} reports expected PGA values in the vicinity of Karaj and Tehran to be on the order of 0.3 g. Results from \citet{Ghodrati2008} for the Gilan province around the city of Rasht are also of the same order of those we show in Figs.~\ref{fig:pga} and \ref{fig:pgaavgs}c. Finally, in for the Kopeh Dagh region, and in particular, for the city of Bojnurd in the nort-east province of Khorasan, \citet{Rahgozar2012} reports expected PGA values for return periods of 475 and 2475 years in range of 0.15--0.22 g and 0.28--0.49 g, respectively, where for magnitudes exceeding $M_w$ 6.5 we found equivalent values to be in the order of 0.2--0.4 and 0.4--0.6 g. Table \ref{tab:pga} shows a condensed version of these comparisons between our results and those of other previous studies for selected cities in northern Iran.
 
+\begin{figure*}[th!]
+    \centering
+    \includegraphics[width=\textwidth]{figures/pdf/figure-12} 
+    \caption{Pending.}% Seismic hazard curve of northern cities in Iran.}
+    \label{fig:hazardcurve}
+\end{figure*}
+
+\begin{figure}[t]
+    \centering
+    \includegraphics[width=\columnwidth]{figures/pdf/figure-13} 
+    \caption{Pending.}% Seismic hazard curve of northern cities in Iran.}
+    \label{fig:hazardcurve}
+\end{figure}
+
 ~\\
 * * *
 \\
 
-
 Fig.~\ref{fig:hazardcurve} represents the hazard curve of different model for some of important northern cities in Iran. 
-
-\begin{figure*} [!ht]
-\centering
-\includegraphics[scale=0.4]{figures/pdf/HazardCurve.pdf} 
-\caption{Seismic Hazard Curve of Northern Cities in Iran}
-\label{fig:hazardcurve}
-\end{figure*}
 
 
 % ==================
